--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0"
+  },
+  "dependencies": {
+    "lodash.debounce": "^4.0.8"
   }
 }
